[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/bosses/generalBossStuff/HealthOrb.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/bosses/cylinderBoss/CylinderBoss.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/olderNoises/slamTypeNoise.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/olderNoises/bossDieAll.wav" type="AudioStream" id=4]
[ext_resource path="res://src/bosses/generalBossStuff/HealthOrbLarge.tscn" type="PackedScene" id=5]

[sub_resource type="CylinderMesh" id=1]
top_radius = 10.0
bottom_radius = 10.0
height = 20.0
radial_segments = 7
rings = 1

[sub_resource type="CylinderShape" id=2]
radius = 10.0
height = 20.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.194805, 0.350649, 0.551948, 0.75974, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.858398, 0, 1, 1, 0, 0, 1, 0.274414, 1, 0, 1, 0, 0.282227, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 71.43
scale = 10.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=8]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )

[node name="CylinderBoss" type="Area" groups=[
"enemy",
]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="HealthOrbFolderSides" type="Spatial" parent="."]

[node name="HealthOrb" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0 )

[node name="HealthOrb2" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 6, 0 )

[node name="HealthOrb3" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -6, 0 )

[node name="HealthOrb4" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 8 )

[node name="HealthOrb5" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 6, 8 )

[node name="HealthOrb6" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -6, 8 )

[node name="HealthOrb7" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -6 )

[node name="HealthOrb8" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 6, -6 )

[node name="HealthOrb9" parent="HealthOrbFolderSides" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -6, -6 )

[node name="HealthOrbFolderTop" type="Spatial" parent="."]

[node name="HealthOrb" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="HealthOrb2" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.83278, 10, 1.47274 )

[node name="HealthOrb3" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25295, 10, 5.76301 )

[node name="HealthOrb4" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4126, 10, 5.83019 )

[node name="HealthOrb6" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7278, 10, 1.05582 )

[node name="HealthOrb7" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.29948, 10.0141, -4.55484 )

[node name="HealthOrb8" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0231271, 10, -6.68403 )

[node name="HealthOrb9" parent="HealthOrbFolderTop" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.50348, 10, -4.11806 )

[node name="HealthOrbFolderBottom" type="Spatial" parent="."]

[node name="HealthOrbLarge" parent="HealthOrbFolderBottom" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0 )

[node name="oneSecondTimer" type="Timer" parent="."]
autostart = true

[node name="moveToTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="slamTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="slamGroundTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="dieParticles" type="Particles" parent="."]
emitting = false
amount = 512
one_shot = true
explosiveness = 0.59
randomness = 1.0
local_coords = false
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="dietimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="slamNoisePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 50.0

[node name="dieNoisePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 40.0

[connection signal="body_entered" from="." to="." method="_on_CylinderBoss_body_entered"]
[connection signal="timeout" from="oneSecondTimer" to="." method="_on_oneSecondTimer_timeout"]
[connection signal="tween_all_completed" from="moveToTween" to="." method="_on_moveToTween_tween_all_completed"]
[connection signal="timeout" from="slamTimer" to="." method="_on_slamTimer_timeout"]
[connection signal="timeout" from="dietimer" to="." method="_on_dietimer_timeout"]
